src/components/Footer/Footer.css
.footer {
  position: relative;
  z-index: 2;
  min-height: 100px;
  background: rgb(255, 255, 255);
  display: block;
  font-family: Georgia, serif;
  box-sizing: border-box;
  color: rgb(34, 34, 34);
  padding-bottom: 15px;
  padding-top: 45px;
  .credits {
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    color: rgb(34, 34, 34);
    font-size: 13px;
    text-align: center;
  }
  .credits::selection {
    background-color: #29cbc8;
    color: #d0ff00;
  }
}
@media all and (max-width: 950px){
  .footer {
    .credits { margin-top: 35px; }
  }
}

